crates/solidity-v2/testing/snapshots/semantic_output/yul/labels/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Unexpected UNRECOGNIZED. One of YulBreakKeyword_Reserved, YulCloseBrace, YulColonEqual, YulComma, YulContinueKeyword_Reserved, YulDecimalLiteral, YulDoubleQuotedHexStringLiteral, YulDoubleQuotedStringLiteral, YulFalseKeyword_Reserved, YulForKeyword_Reserved, YulFunctionKeyword_Reserved, YulHexLiteral, YulIdentifier, YulIfKeyword_Reserved, YulLeaveKeyword_Reserved, YulLetKeyword_Reserved, YulOpenBrace, YulOpenParen, YulPeriod, YulSingleQuotedHexStringLiteral, YulSingleQuotedStringLiteral, YulSwitchKeyword_Reserved, YulTrueKeyword_Reserved was expected
   ╭─[input.sol:7:13]
   │
 7 │         loop:
   │             ┬  
   │             ╰── Error occurred here.
───╯
------------------------------------------------------------------------

Definitions (0):

------------------------------------------------------------------------

References (0):

------------------------------------------------------------------------

Unbound identifiers (0):
